--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "kafka",
     "librdkafka"
   ],
+  "scripts": {
+    "install": "node install.js"
+  },
   "repository": {
     "type": "git",
     "url": "git@github.com:Blizzard/node-rdkafka.git"
