--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-rdkafka",
-  "version": "2.6.1",
+  "version": "2.6.1-sg.1",
   "description": "Node.js bindings for librdkafka",
   "librdkafka": "0.11.6",
   "main": "lib/index.js",
@@ -14,6 +14,9 @@
     "kafka",
     "librdkafka"
   ],
+  "publishConfig": {
+    "registry": "http://192.168.96.192:4873"
+  },
   "repository": {
     "type": "git",
     "url": "git@github.com:Blizzard/node-rdkafka.git"
